[tool.poetry]
name = "coveo-python-oss"
version = "0.0.1"
description = "coveo-python-oss virtual environment bootstrap for developers"
authors = ["Jonathan Piché <jpiche@coveo.com>"]


[tool.poetry.dependencies]
python = ">=3.8"

coveo-example-library = { path = 'coveo-example-library/', develop = true }
coveo-functools = { path = 'coveo-functools/', develop = true }
coveo-itertools = { path = 'coveo-itertools/', develop = true }
coveo-pypi-cli = { path = 'coveo-pypi-cli/', develop = true }
coveo-stew = { path = 'coveo-stew/', develop = true }
coveo-settings = { path = 'coveo-settings/', develop = true }
coveo-styles = { path = 'coveo-styles/', develop = true }
coveo-systools = { path = 'coveo-systools/', develop = true }
coveo-testing = { path = 'coveo-testing/', develop = true }
coveo-testing-extras = { path = 'coveo-testing-extras/', develop = true }


[tool.stew]
pydev = true


[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
