[tool.poetry]
name = "coveo-example-library"
version = "0.0.1"
description = "coveo-python-oss example library"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-example-library"
authors = ["Jonathan Piché <tools@coveo.com>"]


[tool.poetry.dependencies]
python = ">=3.8"


[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coveo-testing = { path = "../coveo-testing", develop = true }
mypy = "0.950"
pytest = "*"

[tool.stew.ci]
pytest = true
offline-build = true
black = true


[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
