[tool.poetry]
name = "coveo-itertools"
version = "1.0.0"
description = "Utilities and helpers related to collections."
authors = ["Jonathan piché <jpiche@coveo.com>"]


[tool.poetry.dependencies]
python = ">=3.8"


[tool.poetry.dev-dependencies]
coveo-testing = { path = "../coveo-testing/", develop = true }
pytest = "*"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
