[tool.poetry]
name = "coveo-itertools"
version = "1.0.0"
description = "Utilities and helpers related to collections."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss"
authors = ["Jonathan Piché <jpiche@coveo.com>"]

[tool.poetry.dependencies]
python = ">=3.8"


[tool.poetry.dev-dependencies]
coveo-testing = { path = "../coveo-testing/", develop = true }
pytest = "*"


[tool.coveo.ci]
pytest = true
offline-build = true
black = true


[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
