[tool.poetry]
name = "coveo-pypi-cli"
version = "2.0.0"
description = "Query and compute pypi versions from command line."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-pypi-cli"
authors = ["Jonathan Piché <tools@coveo.com>"]

[tool.poetry.dependencies]
python = ">=3.8"

click = "*"
coveo-settings = { version = "^2.0.0" }
coveo-styles = { version = "^2.0.0" }
coveo-systools = { version = "^2.0.0" }
requests = "*"


[tool.poetry.dev-dependencies]
black = { version = "21.6b0", allow-prereleases = true }
coveo-functools = { path = "../coveo-functools/", develop = true }
coveo-settings = { path = "../coveo-settings/" , develop = true }
coveo-styles = { path = "../coveo-styles/", develop = true }
coveo-systools = { path = "../coveo-systools/", develop = true }
coveo-testing = { path = "../coveo-testing/", develop = true }
mypy = "0.812"
pytest = "*"
requests-mock = "*"


[tool.poetry.scripts]
pypi = "coveo_pypi_cli.cli:pypi"


[tool.stew.ci]
pytest = true
offline-build = true
black = true


[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
