[tool.poetry]
name = "coveo-pypi-cli"
version = "2.1.0"
description = "Query and compute pypi versions from command line."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-pypi-cli"
authors = ["Jonathan Piché <tools@coveo.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"

click = ">=8.1"
coveo-settings = "*"
coveo-styles = "*"
coveo-systools = "*"
requests = "*"
setuptools = "*"
typing-extensions = "*"


[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
coveo-functools = { path = "../coveo-functools/", develop = true }
coveo-settings = { path = "../coveo-settings/" , develop = true }
coveo-styles = { path = "../coveo-styles/", develop = true }
coveo-systools = { path = "../coveo-systools/", develop = true }
coveo-testing = { path = "../coveo-testing/", develop = true }
mypy = "1.9.0"
pytest = "*"
requests-mock = "*"
types-requests = "*"


[tool.poetry.scripts]
pypi = "coveo_pypi_cli.cli:pypi"


[tool.stew.ci]
pytest = true
offline-build = true
black = true


[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
