[tool.poetry]
name = "coveo-settings"
version = "2.0.0"
description = "Settings driven by environment variables."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss"
authors = ["Jonathan Piché <tools@coveo.com>"]


[tool.poetry.dependencies]
python = ">=3.8"


[tool.poetry.dev-dependencies]
coveo-testing = { path = "../coveo-testing", develop = true }


[tool.stew.ci]
pytest = true
offline-build = true
black = true


[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
