[tool.poetry]
name = "coveo-stew"
version = "1.0.0"
description = "Opinionated python packaging and development utilities"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss"
authors = ["Jonathan Piché <tools@coveo.com>"]

packages = [
    { include = "coveo_stew/**/*" },
]


[tool.poetry.dependencies]
python = ">=3.6"
black = { version = "20.8b1", allow-prereleases = true }
click = "*"
coveo-functools = { version = "^1.0.0" }
coveo-itertools = { version = "^1.0.0" }
coveo-systools = { version = "^1.0.0" }
coveo-styles = { version = "^1.0.0" }
junit-xml = "*"
mypy = "*"
poetry = "^1.1.4"
toml = "*"
typing_extensions = "*"


[tool.poetry.dev-dependencies]
coveo-functools = { path = "../coveo-functools/", develop = true }
coveo-itertools = { path = "../coveo-itertools/", develop = true }
coveo-systools = { path = "../coveo-systools/", develop = true }
coveo-styles = { path = "../coveo-styles/", develop = true }
coveo-testing = { path = "../coveo-testing/", develop = true }
pytest = "*"


[tool.poetry.scripts]
pyproject = "coveo_stew.commands:stew"
stew = "coveo_stew.commands:stew"

[tool.stew.ci]
pytest = true
offline-build = true
black = true

[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
