[tool.poetry]
name = "coveo-styles"
version = "3.0.0"
description = "Styles, colors and emojis for the command line."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-styles"
authors = ["Jonathan Piché <tools@coveo.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"

click = ">=8.1"
emoji = ">=2"
typing_extensions = "*"


[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
coveo-testing = { path = "../coveo-testing/", develop = true }
mypy = "1.9.0"
pytest = "*"
types-emoji = "*"


[tool.stew.ci]
pytest = true
offline-build = true
black = true


[tool.black]
line-length = 100
target-version = ["py39"]


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
