[tool.poetry]
name = "coveo-systools"
version = "3.0.0"
description = "Filesystem, language and OS related tools."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-systools"
authors = ["Jonathan Piché <tools@coveo.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"

coveo-functools = "*"
typing_extensions = "*"


[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
coveo-functools = { path = "../coveo-functools/", develop = true }
coveo-testing = { path = "../coveo-testing/", develop = true }
mypy = "1.9.0"
pytest = "*"
pytest-asyncio = "*"


[tool.stew.ci]
pytest = true
offline-build = true
black = true


[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
