[tool.poetry]
name = "coveo-testing-extras"
version = "2.0.0"
description = "Dependency-hungry testing helpers"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-testing-extras"
authors = ["Jonathan Piché <tools@coveo.com>"]

[tool.poetry.dependencies]
python = ">=3.8"

coveo-functools = "*"
coveo-settings = "*"
coveo-systools = "*"
coveo-testing = "*"
docker = "*"
six = "*"  # can be removed when this is fixed: https://github.com/docker/docker-py/issues/2807


[tool.poetry.dev-dependencies]
black = { version = "21.6b0", allow-prereleases = true }
coveo-functools = { path = "../coveo-functools/", develop = true }
coveo-settings = { path = "../coveo-settings/", develop = true }
coveo-systools = { path = "../coveo-systools/", develop = true }
coveo-testing = { path = "../coveo-testing/", develop = true }
mypy = "0.812"


[tool.stew.ci]
pytest = true
offline-build = true
black = true


[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
