[tool.poetry]
name = "coveo-testing-extras"
version = "2.1.0"
description = "Dependency-hungry testing helpers"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-testing-extras"
authors = ["Jonathan Piché <tools@coveo.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"  # the docker package doesn't support python 3.10 yet

coveo-functools = "*"
coveo-settings = "*"
coveo-systools = "*"
coveo-testing = "*"
docker = "*"


[tool.poetry.dev-dependencies]
coveo-functools = { path = "../coveo-functools/", develop = true }
coveo-settings = { path = "../coveo-settings/", develop = true }
coveo-systools = { path = "../coveo-systools/", develop = true }
coveo-testing = { path = "../coveo-testing/", develop = true }
types-requests = "*"
typing_extensions = "*"


[tool.stew.ci]
pytest = true
offline-build = true
black = true


[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
