[tool.poetry]
name = "coveo-testing-extras"
version = "3.0.0"
description = "Dependency-hungry testing helpers"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-testing-extras"
authors = ["Jonathan Piché <tools@coveo.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"

coveo-functools = "*"
coveo-settings = "*"
coveo-systools = "*"
coveo-testing = "*"
docker = "*"


[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
coveo-functools = { path = "../coveo-functools/", develop = true }
coveo-settings = { path = "../coveo-settings/", develop = true }
coveo-systools = { path = "../coveo-systools/", develop = true }
coveo-testing = { path = "../coveo-testing/", develop = true }
flake8 = "*"
mypy = "1.9.0"
pytest = "*"
types-requests = "*"
typing_extensions = "*"


[tool.stew.ci]
pytest = true
black = true


[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
