[tool.poetry]
name = "coveo-testing"
version = "1.0.0"
description = "Lightweight testing helpers"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/coveooss/coveo-python-oss"
authors = ["Jonathan Piché <tools@coveo.com>"]

[tool.poetry.dependencies]
python = ">=3.6"

attrs = "*"
pytest = "*"


[tool.poetry.dev-dependencies]
typing_extensions = "*"


[tool.stew.ci]
pytest = true
offline-build = true
black = true


[tool.black]
line-length = 100


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
